--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -179,6 +179,28 @@
 			}
 		});
 	</script>
+
+	<script>
+        const togglePassword = document.getElementById('togglePassword');
+        const passwordField = document.getElementById('id_password');
+        const eyeIcon = document.getElementById('eyeIcon');
+    
+        togglePassword.addEventListener('click', function () {
+            // Alterna el tipo de input entre 'password' y 'text'
+            const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordField.setAttribute('type', type);
+    
+            // Alterna el icono del ojo abierto/cerrado
+            if (type === 'text') {
+                eyeIcon.classList.remove('fa-eye-slash');
+                eyeIcon.classList.add('fa-eye');
+            } else {
+                eyeIcon.classList.remove('fa-eye');
+                eyeIcon.classList.add('fa-eye-slash');
+            }
+        });
+    </script>
+
 </body>
 
 </html>
